# sinterklooser

./: .gitignore  CMakeLists.txt  README.md  filespec.txt
examples/: data01.txt  data02.txt  data03.txt
src/: array.cpp  array.hpp  digraph.cpp  digraph.hpp  edge.cpp  edge.hpp  generator.cpp  graph.cpp  graph.hpp  io.cpp  io.hpp  main.cpp  new_file.cpp  new_file.hpp  node.cpp  node.hpp  processing.cpp  processing.hpp  testing.cpp
